tests/should_fail/struct_pattern_field_type_mismatch.nv
module fail_struct_pat_field_type
struct Point { x: Int, y: Int }
let p = Point(1, 2)
match p {
    Point { x: "hello", y } => println(y),
    _ => println("miss")
}
